[tool.poetry]
name = "api-pi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-pydantic-spec = "^0.5.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
